# demo_dockerize-ragbit

./: .gitignore  LICENSE  README.md
ragbit/: README.md  pyproject.toml
ragbit/src/ragbit/: docker-compose.yaml
ragbit/src/ragbit/backend/: Dockerfile  api.py  data_models.py  pyproject.toml  rag.py
ragbit/src/ragbit/frontend/: Dockerfile  app.py  pyproject.toml
ragbit/src/ragbit/knowledge_base/articles.lance/_transactions/: 0-7b24d8ef-3d08-4359-8b6b-bf06a96f2f0e.txn  1-9da934f6-81db-4e4e-afaf-fd1e59799fc4.txn  10-44901a15-8ecf-4d3e-ae30-47c277185ee2.txn  11-811ae8f2-e682-4022-bb2f-5665ecbc0d5a.txn  2-425d2737-171d-4606-a4eb-147ba7892e16.txn  3-0d86cb81-c3bd-45b8-bce6-f0ba6a00fbb6.txn  4-fcb22742-05e7-4bfd-a6ce-22106e509360.txn  5-2c5716dc-d0f7-4954-bb9b-d3d0bc13e6bd.txn  6-662e86e7-5bc6-46b2-a98e-a7f0c1b4b743.txn  7-c1cadb2b-1760-4fc7-b49f-9ffa2412029a.txn  8-526c7df2-0afd-4e11-815d-ab4ba45854ab.txn  9-ad8c7e49-a3a8-432d-9f68-bd4ca78e31c2.txn
